created CSS file

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <head>
     <meta charset="UTF-8">    
     <title>Hello Microverse project</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href=".github\workflows\style.css">
 </head>
 <body>
     <header>
-        <h1>Hello Microverse!</h1>
+        <h1 class="header">Hello Microverse!</h1>
     </header>
     
 </body>
