created hintrc and stylelint, changed link to CSS in index.html

--- a/.github/workflows/index.html
+++ b/.github/workflows/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">    
     <title>Hello Microverse project</title>
-    <link rel="stylesheet" href=".github\workflows\style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
