--- a/.github/workflows/index.html
+++ b/.github/workflows/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">    
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
     <title>Hello Microverse project</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1 class="header">Hello Microverse!</h1>
-    </header>
-    
+    </header>    
 </body>
 </html>
