--- a/.github/workflows/index.html
+++ b/.github/workflows/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">    
   <title>Hello Microverse project</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header>
-    <h1 class="header">Hello Microverse!</h1>
+    <h1 class="title">Hello Microverse!</h1>
   </header>    
 </body>
 </html>
